testsuite/tests/parser/should_fail/ListTuplePunsFail3.script
:set -XNoListTuplePuns
:load ListTuplePunsFail3
